@@ -1,3 +1,12 @@
+
+2002-12-10
+'Zero padding move'
+  *Analysis Synthesis example:
+     ** Removed useless synthesis zero padding factor
+     ** Fixed some other bugs related to zero padding
+     ** Did a little modification in the GUI so Audio displays are closed when editing configuration
+
+
 2002-11-26  CLAM_0_4_0-rel 
 'Fly examples, fly to seattle' release
   * General:
